--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="first-slide" src="images/hamburguer.png" alt="First slide">
+                <img class="first-slide" src="images/carousel-wallpaper.jpg" alt="Primeiro Slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <p><a class="btn btn-lg btn-primary" href="lanches.html" role="button">Ver mais</a></p>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="item">
-                <img class="second-slide" src="images/churrasco-mobile.png" alt="Second slide">
+                <img class="second-slide" src="images/carousel-wallpaper2.jpg" alt="Segundo Slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <p><a class="btn btn-lg btn-primary" href="lanches.html"
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="item">
-                <img class="third-slide" src="images/hamburguer.png" alt="Third slide">
+                <img class="third-slide" src="images/carousel-wallpaper3.jpg" alt="Terceiro Slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <p><a class="btn btn-lg btn-primary" href="lanches.html"
