Algumas coisas Otimizadas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FastFood</title>
+    <title>Gold in Burguers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
     <script src="script.js"></script>
@@ -64,7 +64,7 @@
     </div>
     <!-- /.carousel -->
 
-    <nav id="principal">
+    <nav id="principal" class="navegador">
         <input type="checkbox" id="check">
         <label id="icone" for="check"><img src="images/icone.png"></label>
         <div class="barra">
@@ -144,8 +144,8 @@
 
                         <div class="politica">
                             <p class="rede">Imagens meramente ilustrativas. Copyright ©
-                                    2018 - Giraffas. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                    total do conteúdo deste site.</p>
+                                    2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                    total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
                         <p class="info1">Trabalhe Conosco|</p>
