--- a/bebidas.html
+++ b/bebidas.html
@@ -123,8 +123,8 @@
 
                     <div class="politica">
                         <p class="rede">Imagens meramente ilustrativas. Copyright ©
-                            2018 - Giraffas. Todos os direitos reservados. É proibida a reprodução parcial ou
-                            total do conteúdo deste site.</p>
+                            2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                            total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                     </div>
                     <p class="info1">Aviso de Fraude|</p>
                     <p class="info1">Trabalhe Conosco|</p>
