--- a/cardapio.html
+++ b/cardapio.html
@@ -101,9 +101,9 @@
                 <section class="info">
                     <div class="separa">
                         <div class="politica">
-                            <p class="rede"><a href="#" target="_blank">Imagens meramente ilustrativas. Copyright ©
-                                    2018 - Giraffas. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                    total do conteúdo deste site.</a></p>
+                            <p class="rede">Imagens meramente ilustrativas. Copyright ©
+                                2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
                         <p class="info1">Trabalhe Conosco|</p>
