--- a/Delivery.html
+++ b/Delivery.html
@@ -69,9 +69,9 @@
                     <section class="info">
             
                             <div class="politica">
-                                <p class="rede"><a>Imagens meramente ilustrativas. Copyright ©
-                                        2018 - Giraffas. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                        total do conteúdo deste site.</a></p>
+                                <p class="rede">Imagens meramente ilustrativas. Copyright ©
+                                    2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                    total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                             </div>
                             <p class="info1">Aviso de Fraude|</p>
                             <p class="info1">Trabalhe Conosco|</p>
