--- a/lanches.html
+++ b/lanches.html
@@ -110,8 +110,8 @@
                     <div class="separa">
                         <div class="politica">
                             <p class="rede"><a href="#" target="_blank">Imagens meramente ilustrativas. Copyright ©
-                                    2018 - Giraffas. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                    total do conteúdo deste site.</a></p>
+                                2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</a></p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
                         <p class="info1">Trabalhe Conosco|</p>
