Fix And V.1.0 Logo

--- a/cardapio.html
+++ b/cardapio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FastFood</title>
+    <title>Golden Burguer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
     <script src="script.js"></script>
@@ -13,42 +13,44 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/npm.js"></script>
+    <link rel="icon" href="images/LOGO GB ICONE.png"/>
 </head>
 
 <body>
     <nav id="principal">
+        <div class="teste"><img src="images/TEMPLATE novo sem fundo.png"/></div>
         <input type="checkbox" id="check">
         <label id="icone" for="check"><img src="images/icone.png"></label>
         <div class="barra">
             <nav id="mobile">
-                <a href="">
+                <a href="cardapio.html">
                     <div class="link">Cardapios</div>
                 </a>
-                <a href="">
+                <a href="Delivery.html">
                     <div class="link">Endereços</div>
                 </a>
-                <a href="">
+                <a href="para-Familia.html">
                     <div class="link">Novidades</div>
                 </a>
-                <a href="">
+                <a href="porcoes.html">
                     <div class="link">Ofertas</div>
                 </a>
-                <a href="">
+                <a href="#">
                     <div class="link">Fale Conosco</div>
                 </a>
             </nav>
         </div>
         <ul>
-            <li>Cardapios</li>
-            <li>Endereços</li>
-            <li>Novidades</li>
-            <li>Ofertas</li>
-            <li>Quem Somos?</li>
+            <li><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
+            <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
+            <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
+            <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
+            <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
         </ul>
     </nav>
     <section class="cardapio-ala">
         <p><a id="home" href="index.html">home >></a> <a id="cardapio">Cardápio</a></p>
-        <h1>Nosso Cardápio</h1>
+        <h1>Nosso Cardápio!</h1>
         <figure class="foto">
             <img id="bebida" src="images/bebida.png">
             <figcaption class="foto1" onmouseout="fotoNormal(6)" onmousemove="fotoZoom(6)">Bebidas</figcaption>
@@ -102,7 +104,7 @@
                     <div class="separa">
                         <div class="politica">
                             <p class="rede">Imagens meramente ilustrativas. Copyright ©
-                                2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução parcial ou
                                 total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
