--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gold in Burguers</title>
+    <meta name="google-site-verification" content="TZPGoOqUABH1I6z6uzx0J5_PP8nN7-lyrEE0BMHUocA" />
+    <title>Golden Burguer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
     <script src="script.js"></script>
@@ -13,6 +14,24 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/npm.js"></script>
+    <link rel="icon" href="images/LOGO GB ICONE.png"/>
+    <!--MetaTags-->
+    <!--============================================================================-->
+        <meta name="title" content="Golden Burguer"/>
+        <meta name="description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia"/>
+        <meta name="keywords" content="Hamburguer,hamburguer,Bebidas,bebidas,lanches,Lanches,Fast,Food,Delivery,delivery,Drink,drink,Burguer,Ofertas,ofertas,Preços,Comida,Porções,porções,Entrega,Golden,golden,burguer,Fale,Conosco,fale,conosco, Ideal, Apetite,Ouro,ouro, Melhor, melhores,Melhores,Melhor,Brasileiro,Best,best,Cardapios,cardapio"/>
+        <meta name="author" content="Jairo Arcy Tunisse"/>
+        <meta name="mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="application-name" content="Golden Burguer"/>
+        <meta name="apple-mobile-web-app-title" content="Golden Burguer"/>
+    <!--Open Graph-->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jairo-arcy.github.io/Gold-In-Burguer/"/>
+    <meta property="og:title" content="Golden Burguer">
+    <meta property="og:description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia "/>
+    <meta property="og:image" content="https://jairo-arcy.github.io/Gold-In-Burguer/index.html"/>
+    <!--========================================================================================-->
 </head>
 
 <body>
@@ -65,6 +84,7 @@
     <!-- /.carousel -->
 
     <nav id="principal" class="navegador">
+       <div class="teste"><img src="images/TEMPLATE novo sem fundo.png"/></div>
         <input type="checkbox" id="check">
         <label id="icone" for="check"><img src="images/icone.png"></label>
         <div class="barra">
@@ -72,26 +92,26 @@
                 <a href="cardapio.html">
                     <div class="link">Cardapios</div>
                 </a>
-                <a href="">
+                <a href="Delivery.html">
                     <div class="link">Endereços</div>
                 </a>
-                <a href="">
+                <a href="para-Familia.html">
                     <div class="link">Novidades</div>
                 </a>
-                <a href="">
+                <a href="porcoes.html">
                     <div class="link">Ofertas</div>
                 </a>
-                <a href="">
+                <a href="#">
                     <div class="link">Fale Conosco</div>
                 </a>
             </nav>
         </div>
         <ul>
-            <li>Cardapios</li>
-            <li>Endereços</li>
-            <li>Novidades</li>
-            <li>Ofertas</li>
-            <li>Fale Conosco</li>
+            <li class="first"><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
+            <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
+            <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
+            <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
+            <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
         </ul>
     </nav>
     <a href="Delivery.html">
@@ -144,7 +164,7 @@
 
                         <div class="politica">
                             <p class="rede">Imagens meramente ilustrativas. Copyright ©
-                                    2018 - Gold In Burguers. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                    2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução parcial ou
                                     total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
