--- a/lanches.html
+++ b/lanches.html
@@ -1,147 +1,152 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Golden Burguer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
-    <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/carousel.css" />
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/npm.js"></script>
-    <link rel="icon" href="images/LOGO GB ICONE.png"/>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Golden Burguer</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
+        <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/carousel.css" />
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/npm.js"></script>
+        <link rel="icon" href="images/LOGO GB ICONE.png" />
+    </head>
 
-<body>
-    <nav id="principal">
-        <div class="teste"><img src="images/TEMPLATE novo sem fundo.png"/></div>
-        <input type="checkbox" id="check">
-        <label id="icone" for="check"><img src="images/icone.png"></label>
-        <div class="barra">
-            <nav id="mobile">
-                <a href="cardapio.html">
-                    <div class="link">Cardapios</div>
-                </a>
-                <a href="Delivery.html">
-                    <div class="link">Endereços</div>
-                </a>
-                <a href="para-Familia.html">
-                    <div class="link">Novidades</div>
-                </a>
-                <a href="porcoes.html">
-                    <div class="link">Ofertas</div>
-                </a>
-                <a href="#">
-                    <div class="link">Fale Conosco</div>
-                </a>
-            </nav>
-        </div>
-        <ul>
-            <li class="first"><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
-            <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
-            <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
-            <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
-            <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
-        </ul>
-    </nav>
-    
-    <section class="lanches">
-            <p><a class="home" href="index.html">home</a></p><p><a class="locall">Lanches</a></p>
-        <h1>Experimente nossos Melhores Sanduiches!</h1>
-    </section>
-    <figure class="foto">
-        <img id="bebida" src="images/brutos.png">
-        <figcaption class="foto1" onmouseout="fotoNormal(7)" onmousemove="fotoZoom(7)">Brutos</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="comida" src="images/cheddar com bacom.png">
-        <figcaption class="foto2" onmouseout="fotoNormal(8)" onmousemove="fotoZoom(8)">Cheddar Com Bacon</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/cheddar.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(9)" onmouseout="fotoNormal(9)">Cheddar</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/galo de briga.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">Galo de Briga</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/tripocheddar.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(10)" onmouseout="fotoNormal(10)">Tripo cheddar</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/tripoxburgecomovobacom.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(11)" onmouseout="fotoNormal(11)">Tripo x-burger com ovo e bacom</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/tripoxsalada.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(12)" onmouseout="fotoNormal(12)">Tripo x-salada</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/x-salada.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(13)" onmouseout="fotoNormal(13)">x-salada</figcaption>
-    </figure>
-    <figure class="foto">
-        <img id="lanche" src="images/frango.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(14)" onmouseout="fotoNormal(14)">x Frango</figcaption>
-    </figure>
-    <figure class="foto" id="segunda-figura">
-        <img id="lanche" src="images/lanche.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">X-burger </figcaption>
-    </figure>
-    <figure class="foto" id="ultimo-lanche">
-        <img id="lanche" src="images/lanche.png">
-        <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">Tripo x-salada</figcaption>
-    </figure>
-    <a href="lanches.html"><section class="topo">
-        <figure>
-            <img src="images/seta-up.png" />
+    <body>
+        <nav id="principal">
+            <div class="teste"><img src="images/TEMPLATE novo sem fundo.png" /></div>
+            <input type="checkbox" id="check">
+            <label id="icone" for="check"><img src="images/icone.png"></label>
+            <div class="barra">
+                <nav id="mobile">
+                    <a href="cardapio.html">
+                        <div class="link">Cardapios</div>
+                    </a>
+                    <a href="Delivery.html">
+                        <div class="link">Endereços</div>
+                    </a>
+                    <a href="para-Familia.html">
+                        <div class="link">Novidades</div>
+                    </a>
+                    <a href="porcoes.html">
+                        <div class="link">Ofertas</div>
+                    </a>
+                    <a href="#">
+                        <div class="link">Fale Conosco</div>
+                    </a>
+                </nav>
+            </div>
+            <ul>
+                <li class="first"><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
+                <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
+                <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
+                <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
+                <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
+            </ul>
+        </nav>
+
+        <section class="lanches">
+            <p><a class="home" href="index.html">home</a></p>
+            <p><a class="locall">Lanches</a></p>
+            <h1>Experimente nossos Melhores Sanduiches!</h1>
+        </section>
+        <figure class="foto">
+            <img id="bebida" src="images/brutos.png">
+            <figcaption class="foto1" onmouseout="fotoNormal(7)" onmousemove="fotoZoom(7)">Brutos</figcaption>
         </figure>
-        <h1>Ir para o Topo</h1>
-    </section></a>
+        <figure class="foto">
+            <img id="comida" src="images/cheddar com bacom.png">
+            <figcaption class="foto2" onmouseout="fotoNormal(8)" onmousemove="fotoZoom(8)">Cheddar Com Bacon</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/cheddar.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(9)" onmouseout="fotoNormal(9)">Cheddar</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/galo de briga.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">Galo de Briga</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/tripocheddar.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(10)" onmouseout="fotoNormal(10)">Tripo cheddar</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/tripoxburgecomovobacom.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(11)" onmouseout="fotoNormal(11)">Tripo x-burger com ovo e
+                bacom</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/tripoxsalada.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(12)" onmouseout="fotoNormal(12)">Tripo x-salada</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/x-salada.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(13)" onmouseout="fotoNormal(13)">x-salada</figcaption>
+        </figure>
+        <figure class="foto">
+            <img id="lanche" src="images/frango.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(14)" onmouseout="fotoNormal(14)">x Frango</figcaption>
+        </figure>
+        <figure class="foto" id="segunda-figura">
+            <img id="lanche" src="images/lanche.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">X-burger </figcaption>
+        </figure>
+        <figure class="foto" id="ultimo-lanche">
+            <img id="lanche" src="images/lanche.png">
+            <figcaption class="foto3" onmousemove="fotoZoom(15)" onmouseout="fotoNormal(15)">Tripo x-salada</figcaption>
+        </figure>
+        <a href="lanches.html">
+            <section class="topo">
+                <figure>
+                    <img src="images/seta-up.png" />
+                </figure>
+                <h1>Ir para o Topo</h1>
+            </section>
+        </a>
 
-    <footer id="rodape">
-        <figure id="rodaimg">
-            <img src="images/fast-rodape.jpg" />
-            <figcaption>
-                <section class="info">
-                    <div class="separa">
-                        <div class="politica">
-                            <p class="rede"><a href="#" target="_blank">Imagens meramente ilustrativas. Copyright ©
-                                2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</a></p>
+        <footer id="rodape">
+            <figure id="rodaimg">
+                <img src="images/fast-rodape.jpg" />
+                <figcaption>
+                    <section class="info">
+                        <div class="separa">
+                            <div class="politica">
+                                <p class="rede">Imagens meramente ilustrativas. Copyright ©
+                                    2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução
+                                    parcial ou
+                                    total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
+                            </div>
+                            <p class="info1">Aviso de Fraude|</p>
+                            <p class="info1">Trabalhe Conosco|</p>
+                            <p class="info1">Promoções</p>
                         </div>
-                        <p class="info1">Aviso de Fraude|</p>
-                        <p class="info1">Trabalhe Conosco|</p>
-                        <p class="info1">Promoções</p>
-                    </div>
-                    <a href="https://twitter.com/?lang=pt-br">
-                        <figure id="social">
-                            <img src="images/twitter.png" />
-                        </figure>
-                    </a>
-                    <a href="https://www.instagram.com/?hl=pt-br">
-                        <figure id="social2">
-                            <img src="images/insta.png" />
-                        </figure>
-                    </a>
-                    <a href="https://www.facebook.com/">
-                        <figure id="social3">
-                            <img src="images/facebook.png" />
-                        </figure>
-                    </a>
+                        <a href="https://twitter.com/?lang=pt-br">
+                            <figure id="social">
+                                <img src="images/twitter.png" />
+                            </figure>
+                        </a>
+                        <a href="https://www.instagram.com/?hl=pt-br">
+                            <figure id="social2">
+                                <img src="images/insta.png" />
+                            </figure>
+                        </a>
+                        <a href="https://www.facebook.com/">
+                            <figure id="social3">
+                                <img src="images/facebook.png" />
+                            </figure>
+                        </a>
 
-                </section>
+                    </section>
 
-            </figcaption>
+                </figcaption>
 
-        </figure>
+            </figure>
 
-    </footer>
-</body>
+        </footer>
+    </body>
 
 </html>
