--- a/index.html
+++ b/index.html
@@ -1,202 +1,208 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="google-site-verification" content="TZPGoOqUABH1I6z6uzx0J5_PP8nN7-lyrEE0BMHUocA" />
-    <title>Golden Burguer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
-    <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/carousel.css" />
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/npm.js"></script>
-    <link rel="icon" href="images/LOGO GB ICONE.png"/>
-    <!--MetaTags-->
-    <!--============================================================================-->
-        <meta name="title" content="Golden Burguer"/>
-        <meta name="description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia"/>
-        <meta name="keywords" content="Hamburguer,hamburguer,Bebidas,bebidas,lanches,Lanches,Fast,Food,Delivery,delivery,Drink,drink,Burguer,Ofertas,ofertas,Preços,Comida,Porções,porções,Entrega,Golden,golden,burguer,Fale,Conosco,fale,conosco, Ideal, Apetite,Ouro,ouro, Melhor, melhores,Melhores,Melhor,Brasileiro,Best,best,Cardapios,cardapio"/>
-        <meta name="author" content="Jairo Arcy Tunisse"/>
-        <meta name="mobile-web-app-capable" content="yes"/>
-        <meta name="apple-mobile-web-app-capable" content="yes"/>
-        <meta name="application-name" content="Golden Burguer"/>
-        <meta name="apple-mobile-web-app-title" content="Golden Burguer"/>
-    <!--Open Graph-->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://jairo-arcy.github.io/Gold-In-Burguer/"/>
-    <meta property="og:title" content="Golden Burguer">
-    <meta property="og:description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia "/>
-    <meta property="og:image" content="https://jairo-arcy.github.io/Gold-In-Burguer/index.html"/>
-    <!--========================================================================================-->
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="google-site-verification" content="TZPGoOqUABH1I6z6uzx0J5_PP8nN7-lyrEE0BMHUocA" />
+        <title>Golden Burguer</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/estilo.css" />
+        <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/carousel.css" />
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/npm.js"></script>
+        <link rel="icon" href="images/LOGO GB ICONE.png" />
+        <link rel="icon" type="image/png" href="images/LOGO GB ICONE.png" sizes="32x32"/>
+        <link rel="icon" type="image/png" href="images/LOGO GB ICONE.png" sizes="192x192"/>
+        <link rel="icon" type="image/png" href="images/LOGO GB ICONE.png" sizes="96x96"/>
+        <link rel="icon" type="image/png" href="images/LOGO GB ICONE.png" sizes="16x16"/>
+        <!--MetaTags-->
+        <!--============================================================================-->
+        <meta name="title" content="Golden Burguer" />
+        <meta name="description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia" />
+        <meta name="keywords" content="Hamburguer,hamburguer,Bebidas,bebidas,lanches,Lanches,Fast,Food,Delivery,delivery,Drink,drink,Burguer,Ofertas,ofertas,Preços,Comida,Porções,porções,Entrega,Golden,golden,burguer,Fale,Conosco,fale,conosco, Ideal, Apetite,Ouro,ouro, Melhor, melhores,Melhores,Melhor,Brasileiro,Best,best,Cardapios,cardapio" />
+        <meta name="author" content="Jairo Arcy Tunisse" />
+        <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="application-name" content="Golden Burguer" />
+        <meta name="apple-mobile-web-app-title" content="Golden Burguer" />
+        <!--Open Graph-->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://jairo-arcy.github.io/Gold-In-Burguer/" />
+        <meta property="og:title" content="Golden Burguer">
+        <meta property="og:description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia " />
+        <meta property="og:image" content="https://jairo-arcy.github.io/Gold-In-Burguer/index.html" />
+        <!--========================================================================================-->
+    </head>
 
-<body>
-    <!-- Carousel
+    <body>
+        <!-- Carousel
         ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img class="first-slide" src="images/carousel-wallpaper.jpg" alt="Primeiro Slide">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <p><a class="btn btn-lg btn-primary" href="lanches.html" role="button">Ver mais</a></p>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img class="first-slide" src="images/carousel-wallpaper.jpg" alt="Primeiro Slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="lanches.html" role="button">Ver mais</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img class="second-slide" src="images/carousel-wallpaper2.jpg" alt="Segundo Slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="lanches.html" role="button">Ver mais</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img class="third-slide" src="images/carousel-wallpaper3.jpg" alt="Terceiro Slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <p><a class="btn btn-lg btn-primary" href="lanches.html" role="button">Ver mais</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="item">
-                <img class="second-slide" src="images/carousel-wallpaper2.jpg" alt="Segundo Slide">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <p><a class="btn btn-lg btn-primary" href="lanches.html"
-                                role="button">Ver mais</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img class="third-slide" src="images/carousel-wallpaper3.jpg" alt="Terceiro Slide">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <p><a class="btn btn-lg btn-primary" href="lanches.html"
-                                role="button">Ver mais</a></p>
-                    </div>
-                </div>
-            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <!-- /.carousel -->
+        <!-- /.carousel -->
 
-    <nav id="principal" class="navegador">
-       <div class="teste"><img src="images/TEMPLATE novo sem fundo.png"/></div>
-        <input type="checkbox" id="check">
-        <label id="icone" for="check"><img src="images/icone.png"></label>
-        <div class="barra">
-            <nav id="mobile">
-                <a href="cardapio.html">
-                    <div class="link">Cardapios</div>
-                </a>
-                <a href="Delivery.html">
-                    <div class="link">Endereços</div>
-                </a>
-                <a href="para-Familia.html">
-                    <div class="link">Novidades</div>
-                </a>
-                <a href="porcoes.html">
-                    <div class="link">Ofertas</div>
-                </a>
-                <a href="#">
-                    <div class="link">Fale Conosco</div>
-                </a>
-            </nav>
-        </div>
-        <ul>
-            <li class="first"><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
-            <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
-            <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
-            <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
-            <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
-        </ul>
-    </nav>
-    <a href="Delivery.html">
-        <section class="not">
-            <h1>Delivery</h1>
+        <nav id="principal" class="navegador">
+            <div class="teste"><img src="images/TEMPLATE novo sem fundo.png" /></div>
+            <input type="checkbox" id="check">
+            <label id="icone" for="check"><img src="images/icone.png"></label>
+            <div class="barra">
+                <nav id="mobile">
+                    <a href="cardapio.html">
+                        <div class="link">Cardapios</div>
+                    </a>
+                    <a href="Delivery.html">
+                        <div class="link">Endereços</div>
+                    </a>
+                    <a href="para-Familia.html">
+                        <div class="link">Novidades</div>
+                    </a>
+                    <a href="porcoes.html">
+                        <div class="link">Ofertas</div>
+                    </a>
+                    <a href="#">
+                        <div class="link">Fale Conosco</div>
+                    </a>
+                </nav>
+            </div>
+            <ul>
+                <li class="first"><a class="nav-desktop" href="cardapio.html">Cardapios</a></li>
+                <li><a class="nav-desktop" href="Delivery.html">Endereços</a></li>
+                <li><a class="nav-desktop" href="para-Familia.html">Novidades</a></li>
+                <li><a class="nav-desktop" href="porcoes.html">Ofertas</a></li>
+                <li><a class="nav-desktop" href="#">Fale Conosco</a></li>
+            </ul>
+        </nav>
+        <a href="Delivery.html">
+            <section class="not">
+                <h1>Delivery</h1>
+            </section>
+        </a>
+        <section class="cardapio">
+            <h1>Nosso Cardápio</h1>
+            <a href="bebidas.html">
+                <figure class="foto">
+                    <img id="bebida" src="images/bebida.png">
+                    <figcaption class="foto1" onmouseout="fotoNormal(6)" onmousemove="fotoZoom(6)">Bebidas</figcaption>
+                </figure>
+            </a>
+
+            <figure class="foto">
+                <img id="comida" src="images/comida.png">
+                <figcaption class="foto2" onmouseout="fotoNormal(5)" onmousemove="fotoZoom(5)">Pratos</figcaption>
+            </figure>
+
+
+            <a href="lanches.html">
+                <figure class="foto">
+                    <img id="lanche" src="images/lanche.png">
+                    <figcaption class="foto3" onmousemove="fotoZoom(4)" onmouseout="fotoNormal(4)">Lanches</figcaption>
+                </figure>
+            </a>
+
+
+            <figure class="foto">
+                <img id="picanha" src="images/picanha.png">
+                <figcaption class="foto4" onmouseout="fotoNormal(1)" onmousemove="fotoZoom(1)">Para Toda Fámilia</figcaption>
+            </figure>
+
+
+            <figure class="foto">
+                <img id="porcao" src="images/porça.png">
+                <figcaption class="foto5" onmouseout="fotoNormal(2)" onmousemove="fotoZoom(2)">Porções</figcaption>
+            </figure>
+
+
+            <figure class="foto">
+                <img id="doce" src="images/Sobremesa.png">
+                <figcaption class="foto6" onmousemove="fotoZoom(3)" onmouseout="fotoNormal(3)">Sobremesas</figcaption>
+            </figure>
         </section>
-    </a>
-    <section class="cardapio">
-        <h1>Nosso Cardápio</h1>
-       <a href="bebidas.html"> <figure class="foto">
-            <img id="bebida" src="images/bebida.png">
-            <figcaption class="foto1" onmouseout="fotoNormal(6)" onmousemove="fotoZoom(6)">Bebidas</figcaption>
-        </figure></a>
 
-       <figure class="foto">
-            <img id="comida" src="images/comida.png">
-            <figcaption class="foto2" onmouseout="fotoNormal(5)" onmousemove="fotoZoom(5)">Pratos</figcaption>
-        </figure>
-
-
-        <a href="lanches.html"> <figure class="foto">
-            <img id="lanche" src="images/lanche.png">
-            <figcaption class="foto3" onmousemove="fotoZoom(4)" onmouseout="fotoNormal(4)">Lanches</figcaption>
-        </figure></a>
-
-
-        <figure class="foto">
-            <img id="picanha" src="images/picanha.png">
-            <figcaption class="foto4" onmouseout="fotoNormal(1)" onmousemove="fotoZoom(1)">Para Toda Fámilia</figcaption>
-        </figure>
-
-
-        <figure class="foto">
-            <img id="porcao" src="images/porça.png">
-            <figcaption class="foto5" onmouseout="fotoNormal(2)" onmousemove="fotoZoom(2)">Porções</figcaption>
-        </figure>
-
-
-        <figure class="foto">
-            <img id="doce" src="images/Sobremesa.png">
-            <figcaption class="foto6" onmousemove="fotoZoom(3)" onmouseout="fotoNormal(3)">Sobremesas</figcaption>
-        </figure>
-    </section>
-
-    <footer id="rodape">
-        <figure id="rodaimg">
-            <img src="images/fast-rodape.jpg" />
-            <figcaption> 
-                <section class="info">
+        <footer id="rodape">
+            <figure id="rodaimg">
+                <img src="images/fast-rodape.jpg" />
+                <figcaption>
+                    <section class="info">
 
                         <div class="politica">
                             <p class="rede">Imagens meramente ilustrativas. Copyright ©
-                                    2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução parcial ou
-                                    total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
+                                2019 - Golden Burguer. Todos os direitos reservados. É proibida a reprodução parcial ou
+                                total do conteúdo deste site.(Site Não comercial, Somente para Estudo)</p>
                         </div>
                         <p class="info1">Aviso de Fraude|</p>
                         <p class="info1">Trabalhe Conosco|</p>
                         <p class="info1">Promoções</p>
-                    
-                    <a href="https://twitter.com/?lang=pt-br">
-                        <figure id="social">
-                            <img src="images/twitter.png" />
-                        </figure>
-                    </a>
-                    <a href="https://www.instagram.com/?hl=pt-br">
-                        <figure id="social2">
-                            <img src="images/insta.png" />
-                        </figure>
-                    </a>
-                    <a href="https://www.facebook.com/">
-                        <figure id="social3">
-                            <img src="images/facebook.png" />
-                        </figure>
-                    </a>
-                </section>
-            </figcaption>
 
-        </figure>
+                        <a href="https://twitter.com/?lang=pt-br">
+                            <figure id="social">
+                                <img src="images/twitter.png" />
+                            </figure>
+                        </a>
+                        <a href="https://www.instagram.com/?hl=pt-br">
+                            <figure id="social2">
+                                <img src="images/insta.png" />
+                            </figure>
+                        </a>
+                        <a href="https://www.facebook.com/">
+                            <figure id="social3">
+                                <img src="images/facebook.png" />
+                            </figure>
+                        </a>
+                    </section>
+                </figcaption>
 
-    </footer>
+            </figure>
 
-
+        </footer>
 
 
 
-</body>
+
+
+    </body>
 
 </html>
