--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://jairo-arcy.github.io/Gold-In-Burguer/" />
         <meta property="og:title" content="Golden Burguer">
-        <meta property="og:description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia " />
-        <meta property="og:image" content="https://jairo-arcy.github.io/Gold-In-Burguer/index.html" />
+        <meta property="og:description" content="Seu Apetite Vale Ouro!! Venha Experimentar Nossos Lanches e Bebidas Deliciosas!! Só aqui No Golden Burguer Têm Ofertas Especiais para Você e toda Sua Familia" />
+        <meta property="og:image" content="https://jairo-arcy.github.io/Golden-Burguer/"/>
         <!--========================================================================================-->
     </head>
 
